[project]
name = "youqu-html"
description = "youqu-html"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
]
dynamic = [
    "version",
]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }


[project.scripts]
youqu3-boom = "youqu3_boom.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu_html/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu_html",
]
